@@ -9,7 +9,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>com.apple.widget.estarStatus</string>
 	<key>CFBundleVersion</key>
-	<string>1.6.2</string>
+	<string>1.6.3</string>
 	<key>CloseBoxInsetX</key>
 	<integer>16</integer>
 	<key>CloseBoxInsetY</key>
