@@ -56,7 +56,8 @@
     <dt onmouseover="updateStatus();"><a href="void();" onclick="clicked('http://www.faulkes-telescope.com/ft_webcams_weather/ftsweather.htm');" class="location" id="location04">Coonabarabran, Australia</a></dt>
      <dd><a href="javascript:void(0);" class="close"> </a>
          <em><strong>Faulkes South</strong><br>Coonabarabran, Australia</em><br>
-         <img src="http://150.203.153.202:8274/axis-cgi/jpg/image.cgi?resolution=320x240" width="120" alt="FTS web camera" />
+  <!--       <img src="http://150.203.153.202:8274/axis-cgi/jpg/image.cgi?resolution=320x240" width="120" alt="FTS web camera" />  -->
+             <img src="http://www.estar.org.uk/jpg/test_card.jpg" width="120" alt="FTS web camera" />  
          <a href="void();" onclick="clicked('http://maps.google.com/maps?f=q&hl=en&q=coonabarabran,+Australia&ie=UTF8&ll=-31.268281,149.281883&spn=0.125305,0.33989&t=h&om=1');">Lat. -31.27, Long. 149.28</a><br>
 	 Google Earth <a href="void();" onclick="clicked('http://www.aao.gov.au/vr/telescopes.kmz');"><u>placemark file</u></a> for SSO<br>
 	 <p class='popupstatus' id='ftsmachines'></p> 
@@ -93,7 +94,7 @@
     <!--<div id='debugDiv'></div>-->
     
     <img class="estarlogo" id="estarlogo" src="png/estarLogo.png" />
-    <p class="title" id="title">Network Status Monitor Widget v1.6.2<br><em>Copyright &copy; 2006, Alasdair Allan &lt;<a href="void();" onclick='clicked("mailto:aa@astro.ex.ac.uk");'>aa@astro.ex.ac.uk</a>&gt;</em></p>
+    <p class="title" id="title">Network Status Monitor Widget v1.6.3<br><em>Copyright &copy; 2006, Alasdair Allan &lt;<a href="void();" onclick='clicked("mailto:aa@astro.ex.ac.uk");'>aa@astro.ex.ac.uk</a>&gt;</em></p>
     <p class="backbody" id="backbody">For more information about the <font color="red">e</font>STAR Network please see our <a href="void();" onclick="clicked('http://www.estar.org.uk/');">project website</a>.<br>
 This version of the widget includes support for the Faulkes Telescope South.</p>
     <div class="widgetButton" id="donePrefsButton" style='position: absolute;bottom: 24px; right: 30px;'></div>
